Clear button works correct

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </section>
 
         <section class="btns">
-          <button id="clear-btn">Clear</button>
+          <button id="clear-btn" type="reset">Clear</button>
           <button>Submit</button>
         </section>
       </form>
